[gd_scene load_steps=8 format=3 uid="uid://bsg315gjaf8cf"]

[ext_resource type="Script" path="res://Scripts/Units/Unit Scripts/Unit.gd" id="1_icljr"]
[ext_resource type="Script" path="res://Scripts/Units/Movement Scripts/UnitMove.gd" id="2_dygt4"]
[ext_resource type="Script" path="res://Scripts/Units/Attack Scripts/UnitAttack.gd" id="3_5dhc5"]
[ext_resource type="PackedScene" uid="uid://bo1ek3hbsh1i0" path="res://Scenes/TestHumanSkeleton.tscn" id="5_dd4fy"]
[ext_resource type="PackedScene" uid="uid://drh5slfmagly0" path="res://Scenes/Units/HealthBar.tscn" id="6_vwk45"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwi2x"]
size = Vector2(32, 118)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dcjwa"]
radius = 8.87097

[node name="Human" type="CharacterBody2D" groups=["PlayerUnits"]]
collision_layer = 4
script = ExtResource("1_icljr")
health = 12.0
type = 1

[node name="Movement" type="Node2D" parent="."]
position = Vector2(-34, -57.6581)
script = ExtResource("2_dygt4")
moveSpeed = -100.0

[node name="Attack" type="Node2D" parent="."]
position = Vector2(-34, -57.6581)
script = ExtResource("3_5dhc5")
attackDamage = 2.0
groupToAttack = "EnemyUnits"

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(-162, -57.6581)
collision_mask = 2

[node name="AttackRadius" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(78, -2.3419)
shape = SubResource("RectangleShape2D_bwi2x")

[node name="UnitHitbox" type="CollisionShape2D" parent="."]
position = Vector2(-34, -57.6581)
scale = Vector2(3.72, 3.8)
shape = SubResource("CapsuleShape2D_dcjwa")

[node name="HealthBar" parent="." instance=ExtResource("6_vwk45")]
position = Vector2(-38, -121)

[node name="Node2D" parent="." instance=ExtResource("5_dd4fy")]
position = Vector2(-34, -41)
scale = Vector2(-0.17, 0.17)

[node name="UpperArmL" parent="Node2D/Skeleton2D/Hip/Spine" index="2"]
scale = Vector2(0.999999, 0.999999)

[node name="LowerLegR" parent="Node2D/Skeleton2D/Hip/UpperLegR" index="0"]
scale = Vector2(1, 1)

[node name="UpperLegL" parent="Node2D/Skeleton2D/Hip" index="2"]
scale = Vector2(1, 1)

[connection signal="ready" from="." to="Node2D/AnimationPlayer" method="play" binds= ["Walk"]]
[connection signal="StartedAttacking" from="Attack" to="Movement" method="_on_attack_started_attacking"]
[connection signal="StoppedAttacking" from="Attack" to="Movement" method="_on_attack_stopped_attacking"]
[connection signal="body_entered" from="AttackArea" to="Attack" method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="Attack" method="_on_attack_area_body_exited"]

[editable path="Node2D"]
